components/base/sgrules_squidnat.tf
resource "aws_security_group_rule" "squidnat_ingress_core_https" {
  type                     = "ingress"
  protocol                 = "tcp"
  from_port                = "443"
  to_port                  = "443"
  security_group_id        = module.squidnat.security_group_id
  source_security_group_id = aws_security_group.core.id
}

resource "aws_security_group_rule" "squidnat_ingress_core_http" {
  type                     = "ingress"
  protocol                 = "tcp"
  from_port                = "80"
  to_port                  = "80"
  security_group_id        = module.squidnat.security_group_id
  source_security_group_id = aws_security_group.core.id
}

resource "aws_security_group_rule" "squidnat_ingress_core_explicit" {
  type                     = "ingress"
  protocol                 = "tcp"
  from_port                = "3128"
  to_port                  = "3128"
  security_group_id        = module.squidnat.security_group_id
  source_security_group_id = aws_security_group.core.id
}

resource "aws_security_group_rule" "squidnat_ingress_core_ftts" {
  type                     = "ingress"
  protocol                 = "tcp"
  from_port                = "18079"
  to_port                  = "18079"
  security_group_id        = module.squidnat.security_group_id
  source_security_group_id = aws_security_group.core.id
}

resource "aws_security_group_rule" "squidnat_ingress_core_smtp" {
  type                     = "ingress"
  protocol                 = "tcp"
  from_port                = "587"
  to_port                  = "587"
  security_group_id        = module.squidnat.security_group_id
  source_security_group_id = aws_security_group.core.id
}

resource "aws_security_group_rule" "squidnat_ingress_govnotify" {
  type                     = "ingress"
  protocol                 = "tcp"
  from_port                = "443"
  to_port                  = "443"
  security_group_id        = module.squidnat.security_group_id
  source_security_group_id = module.lambda_notify.security_group_id
}

resource "aws_security_group_rule" "squidnat_ingress_mock_gov_gw_accounts_processor" {
  count       = var.mock_gov_gw_accounts_processor == true ? 1 : 0

  type                     = "ingress"
  protocol                 = "tcp"
  from_port                = "443"
  to_port                  = "443"
  security_group_id        = module.squidnat.security_group_id
  source_security_group_id = module.lambda_mock_gov_gw_accounts_processor[count.index].security_group_id
}

resource "aws_security_group_rule" "squidnat_egress_mock_gov_gw_accounts_processor" {
  count                    = var.mock_gov_gw_accounts_processor == true ? 1 : 0

  type                     = "egress"
  protocol                 = "tcp"
  from_port                = "443"
  to_port                  = "443"
  source_security_group_id = module.squidnat.security_group_id
  security_group_id        = module.lambda_mock_gov_gw_accounts_processor[count.index].security_group_id
}
